# video-digest

./: .gitignore  README.md  pyproject.toml  server.py  test_m1.py  test_m2_m3.py  test_m4.py  test_m5.py  test_m6.py  test_m7.py
templates/: index.html
videodigest/: __init__.py  analyzer.py  cli.py  downloader.py  formatter.py  frame_extractor.py  infographic.py  transcriber.py  url_parser.py
